--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.maciejak.myplaces.ui.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context="com.maciejak.myplaces.ui.MainActivity">
 
     <Button
         android:id="@+id/splash_screen"
@@ -15,4 +14,4 @@
         android:text="Splash screen"
         />
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
