--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="224dp"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/logoColor"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -11,19 +12,45 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/nav_bar_logo"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:scaleType="centerInside"
-        android:src="@drawable/myplaces_logo_white"/>
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Android Studio"
-        android:textColor="@color/White"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        <ImageView
+            android:id="@+id/nav_bar_logo"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:scaleType="centerInside"
+            android:src="@drawable/myplaces_logo_white"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/nav_bar_logo">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_settings_white_24dp"
+                android:layout_alignParentEnd="true"
+                android:background="@android:color/transparent"
+                android:id="@+id/settings_button"/>
+
+            <TextView
+                android:id="@+id/nav_bar_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Mateusz Maciejak"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/White"
+                android:layout_alignParentStart="true" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
 
 </LinearLayout>
