--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,14 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/nav_list_places"
+            android:icon="@drawable/ic_view_list_black_24dp"
+            android:title="@string/list_of_favourites" />
+
         <item
             android:id="@+id/nav_map"
-            android:icon="@drawable/ic_action_map"
+            android:icon="@drawable/ic_map_black_24dp"
             android:title="@string/map" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
