--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -14,8 +14,8 @@
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/add_place_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="bottom|end"
         android:src="@drawable/ic_add_white_24dp"
         android:layout_margin="@dimen/fab_margin"
