--- a/app/src/main/res/layout/fragment_my_places_list.xml
+++ b/app/src/main/res/layout/fragment_my_places_list.xml
@@ -6,11 +6,16 @@
              tools:context="com.maciejak.myplaces.ui.MyPlacesListFragment"
              xmlns:fab="http://schemas.android.com/apk/res-auto">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_places_list_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/add_place_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="bottom|end"
         android:src="@drawable/ic_add_white_24dp"
         android:layout_margin="@dimen/fab_margin"
