--- a/app/src/main/res/layout/activity_favourite_place_map.xml
+++ b/app/src/main/res/layout/activity_favourite_place_map.xml
@@ -7,11 +7,14 @@
     tools:context="com.maciejak.myplaces.ui.FavouritePlaceMapActivity"
     android:orientation="vertical">
 
-    <include
+    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="?attr/actionBarSize"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_collapseMode="pin"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="@color/logoColor"/>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/add_place_map_fragment"
