--- a/app/src/main/res/layout/row_favourite_my_places.xml
+++ b/app/src/main/res/layout/row_favourite_my_places.xml
@@ -26,42 +26,8 @@
             android:textColor="#222"
             android:textStyle="bold"
             android:textSize="18sp"
-            android:visibility="gone"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/row_favourite_my_place_title"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/row_favourite_my_place_button_details"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/details"
-                android:textColor="@color/Blue"
-                style="@style/Widget.AppCompat.Button.Borderless"/>
-
-            <Button
-                android:id="@+id/row_favourite_my_place_button_edit"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/edit"
-                style="@style/Widget.AppCompat.Button.Borderless"/>
-
-            <Button
-                android:id="@+id/row_favourite_my_place_button_delete"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/delete"
-                android:textColor="@color/Red"
-                style="@style/Widget.AppCompat.Button.Borderless"/>
-
-
-        </LinearLayout>
+            android:visibility="gone"
+            android:gravity="center_horizontal"/>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
