Move to android studio 3.0 -> Gradle 3.0.0 Added mapPhoto field to Place model Added blank page to list of my places

--- a/app/src/main/res/layout/fragment_my_places_list.xml
+++ b/app/src/main/res/layout/fragment_my_places_list.xml
@@ -9,7 +9,35 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_places_list_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
+    <LinearLayout
+        android:id="@+id/my_places_list_empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:visibility="visible">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Brak ulubionych miejsc :("
+            android:textSize="22sp"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp"
+            android:paddingBottom="16dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Dodaj jakieś klikając plusa na prawym dolnym rogu."
+            android:textSize="18sp"/>
+
+    </LinearLayout>
 
 
     <com.github.clans.fab.FloatingActionMenu
