--- a/app/src/main/res/layout/activity_favourite_place_form_add.xml
+++ b/app/src/main/res/layout/activity_favourite_place_form_add.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.maciejak.myplaces.ui.FavouritePlaceFormAddActivity">
+    tools:context="com.maciejak.myplaces.ui.activity.FavouritePlaceFormAddActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
