--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.maciejak.myplaces.ui.SplashScreenActivity"
+    tools:context="com.maciejak.myplaces.ui.activity.SplashScreenActivity"
     android:background="@color/White">
 
     <ImageView
