--- a/app/src/main/res/layout/fragment_my_places_list.xml
+++ b/app/src/main/res/layout/fragment_my_places_list.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context="com.maciejak.myplaces.ui.MyPlacesListFragment"
+             tools:context="com.maciejak.myplaces.ui.fragment.MyPlacesListFragment"
              xmlns:fab="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.RecyclerView
