--- a/app/src/main/res/layout/activity_favourite_place_form_add.xml
+++ b/app/src/main/res/layout/activity_favourite_place_form_add.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -30,6 +29,7 @@
                       android:id="@+id/add_place_form_map"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
+                      android:fitsSystemWindows="true"
                       map:liteMode="true"
                       map:mapType="normal"
                       class="com.google.android.gms.maps.SupportMapFragment"
@@ -39,8 +39,9 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:layout_collapseMode="pin"
+                app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
