--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context="com.maciejak.myplaces.ui.MainActivity">
+    tools:context="com.maciejak.myplaces.ui.activity.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
