--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -6,17 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.maciejak.myplaces.ui.activity.ShowPlaceActivity">
+    tools:context="com.maciejak.myplaces.ui.activity.AddPlaceActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/add_place_app_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/show_place_collapsing_toolbar"
+            android:id="@+id/add_place_collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -24,58 +24,47 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:expandedTitleTextAppearance="@style/ExpandedAppBar">
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/show_place_view_pager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"
-                />
-
-            <ImageView
-                android:id="@+id/show_place_image_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"
-                android:visibility="gone"/>
+            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                      xmlns:map="http://schemas.android.com/apk/res-auto"
+                      android:id="@+id/add_place_map"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:fitsSystemWindows="true"
+                      map:liteMode="true"
+                      map:mapType="normal"
+                      class="com.google.android.gms.maps.SupportMapFragment"
+                      app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:layout_collapseMode="pin"
+                app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_show_place"/>
+    <include layout="@layout/content_add_place"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/show_place_edit_fab"
+        android:id="@+id/add_place_add_photo_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_edit_white_24dp"
-        app:backgroundTint="@color/logoColor"
-        app:fabSize="mini"
-        app:layout_anchor="@+id/add_place_app_bar"
-        app:layout_anchorGravity="left|bottom"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/show_place_delete_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_delete_white_24dp"
+        android:src="@drawable/ic_add_a_photo_white_24dp"
         app:backgroundTint="@color/logoColor"
         app:layout_anchor="@id/add_place_app_bar"
-        app:layout_anchorGravity="bottom|end"
-        app:fabSize="mini"/>
+        app:layout_anchorGravity="bottom|end"/>
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_place_done_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_done_white_24dp"
+        app:backgroundTint="@color/logoColor"/>
 
 </android.support.design.widget.CoordinatorLayout>
