--- a/app/src/main/res/layout/activity_edit_place.xml
+++ b/app/src/main/res/layout/activity_edit_place.xml
@@ -6,17 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.maciejak.myplaces.ui.activity.FavouritePlaceFormAddActivity">
+    tools:context="com.maciejak.myplaces.ui.activity.EditPlaceActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
+        android:id="@+id/edit_place_app_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/favourite_place_form_add_collapsing_toolbar"
+            android:id="@+id/edit_place_collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -24,16 +24,14 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:expandedTitleTextAppearance="@style/ExpandedAppBar">
 
-            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                      xmlns:map="http://schemas.android.com/apk/res-auto"
-                      android:id="@+id/add_place_form_map"
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:fitsSystemWindows="true"
-                      map:liteMode="true"
-                      map:mapType="normal"
-                      class="com.google.android.gms.maps.SupportMapFragment"
-                      app:layout_collapseMode="parallax"/>
+            <ImageView
+                android:id="@+id/edit_place_image_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax"
+                android:visibility="gone"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -46,27 +44,25 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_favourite_place_form_add"/>
+    <include layout="@layout/content_edit_place"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_photo_fab"
+        android:id="@+id/edit_place_add_photo_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_add_a_photo_white_24dp"
         app:backgroundTint="@color/logoColor"
-        app:layout_anchor="@id/app_bar"
+        app:layout_anchor="@id/edit_place_app_bar"
         app:layout_anchorGravity="bottom|end"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/edit_place_done_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:layout_gravity="bottom|end"
         android:src="@drawable/ic_done_white_24dp"
         app:backgroundTint="@color/logoColor"/>
-
-
 
 </android.support.design.widget.CoordinatorLayout>
