--- a/app/src/main/res/layout/content_add_place.xml
+++ b/app/src/main/res/layout/content_add_place.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.maciejak.myplaces.ui.activity.FavouritePlaceFormAddActivity"
-    tools:showIn="@layout/activity_favourite_place_form_add">
+    tools:context="com.maciejak.myplaces.ui.activity.AddPlaceActivity"
+    tools:showIn="@layout/activity_add_place">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/add_place_form_title"
+            <EditText android:id="@+id/add_place_title"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="text"
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/add_place_form_note"
+            <EditText android:id="@+id/add_place_note"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="text"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/add_place_form_describe"
+            <EditText android:id="@+id/add_place_describe"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="text"
@@ -57,7 +57,7 @@
             android:text="@string/photos"/>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/add_place_form_photos_recycler_view"
+            android:id="@+id/add_place_photos_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
