--- a/app/src/main/res/layout/activity_edit_place.xml
+++ b/app/src/main/res/layout/activity_edit_place.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     tools:context="com.maciejak.myplaces.ui.activity.EditPlaceActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -30,8 +32,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"
-                android:visibility="gone"/>
+                app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -55,14 +56,5 @@
         app:backgroundTint="@color/logoColor"
         app:layout_anchor="@id/edit_place_app_bar"
         app:layout_anchorGravity="bottom|end"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/edit_place_done_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_gravity="bottom|end"
-        android:src="@drawable/ic_done_white_24dp"
-        app:backgroundTint="@color/logoColor"/>
 
 </android.support.design.widget.CoordinatorLayout>
