--- a/app/src/main/res/layout/content_add_place.xml
+++ b/app/src/main/res/layout/content_add_place.xml
@@ -59,7 +59,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/add_place_photos_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="400dp"
+            android:scrollbars="none"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
     </LinearLayout>
 
