--- a/app/src/main/res/menu/favourite_map_menu.xml
+++ b/app/src/main/res/menu/favourite_map_menu.xml
@@ -4,13 +4,13 @@
 
     <item
         android:id="@+id/favourite_place_map_action_info"
-        android:title="@string/action_search"
+        android:title="@string/action_info"
         app:showAsAction="collapseActionView|ifRoom"
         android:icon="@drawable/ic_info_outline_white_24dp"/>
 
     <item
         android:id="@+id/favourite_place_map_action_done"
-        android:title="@string/action_search"
+        android:title="@string/action_done"
         app:showAsAction="collapseActionView|ifRoom"
         android:icon="@drawable/ic_done_white_24dp"/>
 
